--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "name": "login-site",
+  "private": true,
+  "scripts": {
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\"",
+    "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
+    "build": "npm install && cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build-frontend",
+    "start": "cd backend && node index.js"
+  },
   "dependencies": {
     "v-lazy-image": "^2.1.1",
     "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.3"
   }
 }
