--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "login-site",
   "private": true,
   "scripts": {
-  "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\"",
-  "build-frontend": "npm run --prefix ../frontend build && rm -Rf dist && mv ../frontend/dist .",
-  "build": "npm install && cd frontend && npm install && npm run build && cd ../backend && npm install && npm run build-frontend",
-  "start": "cd backend && node index.js"
-},
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\"",
+    "build": "npm run build-frontend && npm run build-backend",
+    "build-frontend": "cd frontend && npm install && npm run build && rm -rf ../backend/dist && cp -r dist ../backend/",
+    "build-backend": "cd backend && npm install",
+    "start": "cd backend && node index.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "v-lazy-image": "^2.1.1",
     "vue-router": "^4.2.5"
   },
